NOW header on mobile is fixed...

--- a/src/css/Header.module.scss
+++ b/src/css/Header.module.scss
@@ -4,8 +4,8 @@
         flex-direction: row;
         align-items: center;
         width: 100%;
-        height: 100px;
-        font-size: 22px;
+        height: 150px;
+        font-size: 32px;
         position: fixed;
         z-index: 1000;
 
@@ -20,6 +20,7 @@
         color: #39275B;
         width: fit-content;
         margin-left: 20px;
+
     }
 
     .navigation {
@@ -46,12 +47,9 @@
             transition: all 0.4s ease-in-out;
         }
 
-
     }
 
-    a {
-        font-size: 24px !important;
-    }
+
 
     .navigation {
         display: none;
@@ -64,17 +62,16 @@
         margin-right: 20px;
         cursor: pointer;
 
-
         svg {
-            font-size: 30px !important;
+            font-size: 40px !important;
         }
     }
 
 
     @media only screen and (min-width: 1000px) {
         .container {
-            height: 80px;
-            font-size: 20px;
+            height: 50px;
+            font-size: 22px;
         }
 
 
