--- a/src/index.css
+++ b/src/index.css
@@ -11,7 +11,7 @@ body,
 
 main {
   flex: 1;
-  padding-top: 100px;
+  padding-top: 150px;
 }
 
 .unreleased {
